fix landing page x-overflow

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,3 +1,7 @@
+*{
+    overflow-x: clip;
+}
+
 .App {
   text-align: center;
 }
