--- a/Frontend/src/styles/LandingPage.css
+++ b/Frontend/src/styles/LandingPage.css
@@ -1,5 +1,9 @@
 /* src/styles/LandingPage.css */
 
+*{
+    overflow-x: clip;
+}
+
 /* Base animations */
 @keyframes fadeInUp {
   from {
